# solanaceae_sdbot-webui

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cd.yml  ci.yml
plugins/: CMakeLists.txt  plugin_sdbot-webui.cpp
src/: CMakeLists.txt  sd_bot.cpp  sd_bot.hpp  webapi_interface.hpp  webapi_sdcpp_openai.cpp  webapi_sdcpp_openai.hpp  webapi_sdcpp_stduhpf_wip2.cpp  webapi_sdcpp_stduhpf_wip2.hpp
